--- a/public/assets/style/home.css
+++ b/public/assets/style/home.css
@@ -131,9 +131,9 @@
 
 /* Batasi lebar item untuk Days, Hours, Min, Sec */
 .home-page .count-item:nth-child(1),
-.count-item:nth-child(2),
-.count-item:nth-child(3),
-.count-item:nth-child(4) {
+.home-page .count-item:nth-child(2),
+.home-page .count-item:nth-child(3),
+.home-page .count-item:nth-child(4) {
   max-width: 55px;
 }
 
