--- a/public/assets/style/AuctionsList.css
+++ b/public/assets/style/AuctionsList.css
@@ -76,8 +76,8 @@
 
 .AuctionsList-page .button-apply:hover,
 .AuctionsList-page .button-clear:hover {
-  background-color: #e0a800;
-  border-color: #e0a800;
+  background-color: #000000 !important;
+  border-color: #000000 !important;
   color: #ffffff;
 }
 
@@ -184,7 +184,7 @@
 }
 
 .AuctionsList-page .bid-btn:hover {
-  background-color: #e0a800;
-  border-color: #e0a800;
+  background-color: #000000 !important;
+  border-color: #000000 !important;
   color: #ffffff;
 }
