--- a/public/assets/style/home.css
+++ b/public/assets/style/home.css
@@ -178,8 +178,9 @@
 }
 
 .home-page .live-card .btn-warning:hover {
-  background-color: #e0a800;
-  border-color: #e0a800;
+  background-color: #000000;
+  border-color: #000000;
+  color: #ffffff;
 }
 
 .home-page .view-all-btn {
@@ -206,9 +207,10 @@
   margin-top: 59px;
 }
 
-.home-page .button-auctions:hover {
-  background-color: #e0a800;
-  border-color: #e0a800;
+.home-page .view-all-btn:hover {
+  background-color: #000;
+  color: #fff;
+  border-color: #000;
 }
 
 .home-page .new-arrival {
