--- a/public/assets/style/home.css
+++ b/public/assets/style/home.css
@@ -404,3 +404,14 @@
   font-size: 20px;
   text-align: left;
 }
+.caption-left {
+    left: 5%;
+    right: auto;
+
+    top: 50%;
+    bottom: auto;       /* PENTING */
+    transform: translateY(-50%);
+
+    text-align: left;
+}
+
