--- a/public/assets/style/profileMy.css
+++ b/public/assets/style/profileMy.css
@@ -186,7 +186,7 @@
 }
 
 .AuctionsList-page .bid-btn:hover {
-    background-color: #e0a800;
-    border-color: #e0a800;
+    background-color: #000000;
+    border-color: #000000;
     color: #ffffff;
 }
